[package]
name = "s01_cartpole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"gym" = { path = "../gym" }
"agent" = { path = "../agent" }
rand = "0.8.5"
structopt = { version = "0.3", default-features = false }